# src/GptApi/Endpoints/ChatCompletionsEndpoints.cs
@@ -31,5 +31,6 @@ public static class ChatCompletionsEndpoints
             .Produces(StatusCodes.Status200OK, contentType: "text/event-stream")
             .ProducesProblem(StatusCodes.Status400BadRequest)
             .ProducesProblem(StatusCodes.Status502BadGateway)
-            .ProducesProblem(StatusCodes.Status504GatewayTimeout);
+            .ProducesProblem(StatusCodes.Status504GatewayTimeout)
+            .WithName("CreateChatCompletion");
 }
