# src/GptApi/Endpoints/CompletionsEndpoints.cs
@@ -27,5 +27,6 @@ public static class CompletionsEndpoints
             .Produces(StatusCodes.Status200OK, contentType: "text/event-stream")
             .ProducesProblem(StatusCodes.Status400BadRequest)
             .ProducesProblem(StatusCodes.Status502BadGateway)
-            .ProducesProblem(StatusCodes.Status504GatewayTimeout);
+            .ProducesProblem(StatusCodes.Status504GatewayTimeout)
+            .WithName("CreateCompletion");
 }
