# src/GptApi/Endpoints/EmbeddingsEndpoints.cs
@@ -22,5 +22,6 @@ public static class EmbeddingsEndpoints
             .Produces<EmbeddingsResponse>(StatusCodes.Status200OK)
             .ProducesProblem(StatusCodes.Status400BadRequest)
             .ProducesProblem(StatusCodes.Status502BadGateway)
-            .ProducesProblem(StatusCodes.Status504GatewayTimeout);
+            .ProducesProblem(StatusCodes.Status504GatewayTimeout)
+            .WithName("CreateEmbedding");
 }
